--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.2",
     "swr": "^2.3.6",
