--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.23",
     "next": "15.5.4",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.64.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "styled-components": "^6.1.19",
