--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-select": "^5.10.2",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.2",
     "swr": "^2.3.6",
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-select": "^5.0.0",
     "@types/styled-components": "^5.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
