Update: parse HTML(News, Services, Careers)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.23",
+    "html-react-parser": "^5.2.8",
     "next": "15.5.4",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
